<resources>
    <string name="app_name">Real Calculator</string>
    <string name="start">Начать</string>
    <string name="back">Назад</string>

    <string name="page1">Стандартный</string>
    <string name="page2">Продвинутый</string>
    <string name="page3">Калькулятор</string>

    <string name="_result"></string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_delenie">/</string>
    <string name="_ymnojenie">*</string>
    <string name="_rovno">=</string>
    <string name="_clear">c</string>
    <string name="_delete">←</string>
    <string name="_point">.</string>
    <string name="_leftscoba">(</string>
    <string name="_rightscoba">)</string>
    <string name="_20">20</string>
    <string name="todo">TODO</string>
</resources>