<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@color/greenblack"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"

                    android:background="@drawable/button_gamelevels"
                    android:minWidth="100dp"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:shadowColor="@color/white"
                    android:shadowDx="3"
                    android:shadowDy="5"
                    android:shadowRadius="1"
                    android:text="@string/page1"
                    android:layout_marginLeft="10dp"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:id="@+id/line0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewResult"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/black95"
                            android:gravity="end"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/_result"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_7"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_8"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_9"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewplus"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_plus"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewminus"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_minus"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_4"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_5"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_6"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textViewymnojenie"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_ymnojenie"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewdelenie"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_delenie"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:paddingStart="5dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_1"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_2"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_3"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textViewdelete"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_delete"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewrovno"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"

                            android:padding="10dp"
                            android:text="@string/_rovno"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/textViewclear"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_clear"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels_c"
                            android:padding="10dp"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/textView0"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/_0"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_gamelevels"

                            android:padding="10dp"
                            android:textColor="@color/black95"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>