<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/pic_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/main_img_logo"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:src="@drawable/stickermain"
            android:layout_marginTop="190dp"/>

        <LinearLayout
            android:id="@+id/startLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:gravity="center"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/gold"
                android:shadowRadius="3"
                android:shadowDy="3"
                android:shadowDx="2"
                android:shadowColor="@color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/startLayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_system"

                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/page1"
                    android:textColor="#413B43"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_system"

                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/page2"
                    android:textColor="#413B43"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>